--- a/.github/workflows/UpdateScreenshots.yml
+++ b/.github/workflows/UpdateScreenshots.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
+          distribution: temurin
           java-version: '11'
       - name: Run Update Screenshots
         run: ./gradlew recordPaparazziDebug
