--- a/detekt.yml
+++ b/detekt.yml
@@ -26,7 +26,7 @@ naming:
 
 TwitterCompose:
   ContentEmitterReturningValues:
-    active: false
+    active: true
   ModifierComposable:
     active: false
   ModifierMissing:
