activate PreviewPublic rule of detekt.

--- a/detekt.yml
+++ b/detekt.yml
@@ -44,7 +44,7 @@ TwitterCompose:
   ComposableParamOrder:
     active: false
   PreviewPublic:
-    active: false
+    active: true
   RememberMissing:
     active: false
   ViewModelForwarding:
