--- a/.github/workflows/CommentPR.yml
+++ b/.github/workflows/CommentPR.yml
@@ -17,3 +17,10 @@ jobs:
         run: echo "download artifact later"
       - name: Comment PR
         run: echo "comment pr later"
+        if: ${{ hashFiles('preview-screenshots/out/failures/*.png') != '' }}
+        continue-on-error: true # https://github.com/DroidKaigi/conference-app-2022/issues/497
+        uses: thollander/actions-comment-pull-request@v1
+        with:
+          message: |
+            There are differences in Compose previews. Please check your build and download the diff artifact.
+            https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
