[Detekt] Activate the ModifierComposable rule (#511)

--- a/detekt.yml
+++ b/detekt.yml
@@ -28,7 +28,7 @@ TwitterCompose:
   ContentEmitterReturningValues:
     active: true
   ModifierComposable:
-    active: false
+    active: true
   ModifierMissing:
     active: false
   ModifierReused:
