--- a/detekt.yml
+++ b/detekt.yml
@@ -30,7 +30,7 @@ TwitterCompose:
   ModifierComposable:
     active: true
   ModifierMissing:
-    active: false
+    active: true
   ModifierReused:
     active: false
   ModifierWithoutDefault:
