Activate ComposableParamOrder twitter/compose-rules and fix
https://github.com/DroidKaigi/conference-app-2022/issues/518

the Rule is below.
https://github.com/twitter/compose-rules/blob/main/rules/common/src/main/kotlin/com/twitter/compose/rules/ComposeParameterOrder.kt#L17

--- a/detekt.yml
+++ b/detekt.yml
@@ -42,7 +42,7 @@ TwitterCompose:
   ComposableNaming:
     active: false
   ComposableParamOrder:
-    active: false
+    active: true
   PreviewPublic:
     active: true
   RememberMissing:
