Activate ViewModelForwarding twitter/compose-rules

--- a/detekt.yml
+++ b/detekt.yml
@@ -48,6 +48,6 @@ TwitterCompose:
   RememberMissing:
     active: false
   ViewModelForwarding:
-    active: false
+    active: true
   ViewModelInjection:
     active: true
