Add supported language

--- a/app-ios/DroidKaigi2022/iOS/Info.plist
+++ b/app-ios/DroidKaigi2022/iOS/Info.plist
@@ -4,5 +4,10 @@
 <dict>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+    <key>CFBundleLocalizations</key>
+    <array>
+    <string>en</string>
+    <string>ja</string>
+    </array>
 </dict>
 </plist>
