--- a/.github/workflows/iOSBuild.yml
+++ b/.github/workflows/iOSBuild.yml
@@ -5,6 +5,10 @@ on:
     branches: [ "main" ]
   pull_request:
 
+concurrency:
+  group: ios-build-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-kmm-module:
     runs-on: macos-12
