--- a/.github/workflows/iOSBuild.yml
+++ b/.github/workflows/iOSBuild.yml
@@ -12,7 +12,7 @@ concurrency:
 jobs:
   build-kmm-module:
     runs-on: macos-12
-    steps:
+  Us  steps:
       - uses: actions/checkout@v3
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1.0.4
@@ -25,7 +25,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - name: Build KMM Module
-        run: ./gradlew appioscombined:assembleAppioscombinedReleaseXCFramework
+        run: ./gradlew appioscombined:assembleAppioscombinedDebugXCFramework
       - name: Upload xcframework artifact
         uses: actions/upload-artifact@v3
         with:
