--- a/.github/workflows/iOSBuild.yml
+++ b/.github/workflows/iOSBuild.yml
@@ -12,7 +12,7 @@ concurrency:
 jobs:
   build-kmm-module:
     runs-on: macos-12
-  Us  steps:
+    steps:
       - uses: actions/checkout@v3
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1.0.4
