--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -45,6 +45,7 @@ coilCompose="2.2.1"
 koin = "3.2.0"
 androidXChromeCustomTabs = "1.4.0"
 detekt = '1.21.0'
+androidxSplashScreen = "1.0.0-alpha02"
 
 [libraries]
 androidGradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
@@ -86,6 +87,7 @@ androidxFragment = { module = "androidx.fragment:fragment", version.ref = "andro
 androidxDatastorePreferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidxDatastore" }
 androidxStartup =  { module = "androidx.startup:startup-runtime", version.ref = "androidxStartup" }
 androidXChromeCustomTabs = { module = "androidx.browser:browser", version.ref = "androidXChromeCustomTabs" }
+androidxSplashScreen = { module = "androidx.core:core-splashscreen", version.ref = "androidxSplashScreen" }
 
 multiplatformSettingsCoroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "multiplatformSettings" }
 multiplatformSettingsDatastore = { module = "com.russhwolf:multiplatform-settings-datastore", version.ref = "multiplatformSettings" }
