--- a/app-ios/.swiftlint.yml
+++ b/app-ios/.swiftlint.yml
@@ -14,5 +14,5 @@ identifier_name:
   min_length: 2
 
 file_header:
-  severity: error
+  severity: warning
   forbidden_pattern: ^(?!// Workaround:)
