--- a/app-android/src/main/AndroidManifest.xml
+++ b/app-android/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity
             android:name="io.github.droidkaigi.confsched2022.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.DroidKaigi.NoActionBar">
+            android:theme="@style/Theme.DroidKaigi.SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
