--- a/app-android/src/main/AndroidManifest.xml
+++ b/app-android/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DroidKaigi"
+        android:theme="@style/Theme.DroidKaigi.SplashTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="33">
         <activity
