--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ molecule = "0.4.0"
 buildkonfig = "0.13.3"
 
 androidxCore = "1.9.0"
+androidxAppCompat = "1.6.0-rc01"
 androidDesugarJdkLibs = "2.0.0"
 compose = "1.3.0-beta03"
 composeCompiler = "1.3.1"
@@ -90,6 +91,7 @@ accompanistFlowlayout = { module = "com.google.accompanist:accompanist-flowlayou
 kotlinSerializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 
 androidxCoreKtx = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
+androidxAppCompat = { module = "androidx.appcompat:appcompat", version.ref = "androidxAppCompat"}
 androidxNavigationCompose = { module = "androidx.navigation:navigation-compose", version.ref = "androidxNavigationCompose" }
 androidxLifecycleLifecycleRuntimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
 androidxActivityCompose = { module = "androidx.activity:activity-compose", version.ref = "androidxActivity" }
