Activate RememberMissing rule for detekt

--- a/detekt.yml
+++ b/detekt.yml
@@ -46,7 +46,7 @@ TwitterCompose:
   PreviewPublic:
     active: true
   RememberMissing:
-    active: false
+    active: true
   ViewModelForwarding:
     active: true
   ViewModelInjection:
