--- a/.github/workflows/iOSBuild.yml
+++ b/.github/workflows/iOSBuild.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
+      - name: Select Xcode
+        run: sudo xcode-select -s '/Applications/Xcode_14.0.app'
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1.0.4
       - name: Copy CI gradle.properties
