--- a/.github/workflows/iOSLint.yml
+++ b/.github/workflows/iOSLint.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
+      - name: Select Xcode
+        run: sudo xcode-select -s '/Applications/Xcode_14.0.app'
       - name: Run swiftlint command plugin
         working-directory: app-ios
         run: |
