--- a/.github/workflows/CommentPR.yml
+++ b/.github/workflows/CommentPR.yml
@@ -48,7 +48,7 @@ jobs:
         if: steps.checkout_docs.outcome == 'success'
         continue-on-error: true # https://github.com/DroidKaigi/conference-app-2022/issues/497
         env:
-          BRANCH_NAME: companion_${{ github.head_ref || github.ref_name }}
+          BRANCH_NAME: companion_${{ github.event.workflow_run.head_branch }}
         run: |
           cd temp_docs/
           git switch -C $BRANCH_NAME
@@ -78,13 +78,19 @@ jobs:
           done
           echo ::set-output name=comment::$(cat report.md)
 
-      - name: Comment PR
-        if: steps.pr_comment.outcome == 'success'
-        uses: thollander/actions-comment-pull-request@v1
+      - name: 'Comment on PR'
+        uses: actions/github-script@v3
         with:
-          message: ${{ steps.pr_comment.outputs.comment }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            var fs = require('fs');
+            var issue_number = Number(fs.readFileSync('./NR'));
+            await github.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: issue_number,
+              body: ${{ steps.pr_comment.outputs.comment }}
+            });
       - name: Delete old branch saving screenshots
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
