--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -76,6 +76,7 @@ detektGradlePlugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugi
 kspGradlePlugin = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 paparazziGradlePlugin = { module = "app.cash.paparazzi:paparazzi-gradle-plugin", version.ref = "paparazzi" }
 playOssLicensesPlugin = { module = "com.google.android.gms:oss-licenses-plugin", version.ref = "playOssLicensesPlugin" }
+crashlyticsPlugin = { module = "com.google.firebase:firebase-crashlytics-gradle", version = "2.9.2" }
 
 composeRuntime = { module = "androidx.compose.runtime:runtime", version.ref = "compose" }
 composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
@@ -139,6 +140,8 @@ coilCompose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" 
 mokoResources = { module = "dev.icerock.moko:resources", version.ref = "mokoResources" }
 mokoResourcesCompose = { module = "dev.icerock.moko:resources-compose", version.ref = "mokoResources" }
 playOssLicenses = { module = "com.google.android.gms:play-services-oss-licenses", version.ref="playOssLicenses" }
+crashlytics = { module = "com.google.firebase:firebase-crashlytics-ktx", version = "18.2.13" }
+crashlyticsAnalytics = { module = "com.google.firebase:firebase-analytics-ktx", version = "21.1.1" }
 
 twitterComposeRulesDetekt = { module = "com.twitter.compose.rules:detekt", version.ref = "twitterComposeRulesDetekt" }
 
