--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-androidGradlePlugin = "7.4.0-beta01"
+androidGradlePlugin = "8.0.0-alpha01"
 kotlin = "1.7.10"
 molecule = "0.4.0"
 buildkonfig = "0.13.3"
