Make DroidKaigiSchedule stable

--- a/gradle.properties
+++ b/gradle.properties
@@ -40,3 +40,6 @@ kotlin.js.compiler=ir
 # in order to determine flavors.
 # https://github.com/yshrsmz/BuildKonfig#product-flavor
 buildkonfig.flavor=dev
+
+enableComposeCompilerMetrics=true
+enableComposeCompilerReports=true
