--- a/.github/workflows/DependencyDiff.yml
+++ b/.github/workflows/DependencyDiff.yml
@@ -16,9 +16,10 @@ jobs:
         with:
           fetch-depth: 0
       - name: set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: '11'
+          distribution: 'temurin'
       - id: dependency-diff
         name: Generate dependency diff
         run: |
