--- a/.github/workflows/DeployZipline.yml
+++ b/.github/workflows/DeployZipline.yml
@@ -32,9 +32,10 @@ jobs:
         run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 11
+          distribution: 'temurin'
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
