--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -53,7 +53,7 @@ paparazzi = "1.0.0"
 showkase = "1.0.0-beta13"
 testParameterInjector = "1.9"
 mokoResources = "0.20.1"
-detekt = '1.21.0'
+detekt = '1.22.0-RC1'
 androidxSplashScreen = "1.0.0"
 twitterComposeRulesDetekt = "0.0.18"
 playOssLicenses = "17.0.0"
