--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ androidDesugarJdkLibs = "2.0.0"
 compose = "1.3.2"
 composeMaterial = "1.3.1"
 composeFoundation = "1.3.1"
+composeIcon = "1.3.1"
 composeCompiler = "1.3.2"
 composeMaterial3WindowSizeClass = "1.0.0-rc01"
 composeMaterial3 = "1.0.0-rc01"
@@ -86,7 +87,7 @@ composeUi = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 composeUiGoogleFonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "compose" }
 composeMaterial = { module = "androidx.compose.material:material", version.ref = "composeMaterial" }
 composeFoundation = { module = "androidx.compose.foundation:foundation", version.ref = "composeFoundation" }
-composeMaterialIcons = { module = "androidx.compose.material:material-icons-extended", version.ref = "compose" }
+composeMaterialIcons = { module = "androidx.compose.material:material-icons-extended", version.ref = "composeIcon" }
 composeMaterial3 = { module = "androidx.compose.material3:material3", version.ref = "composeMaterial3" }
 composeUiToolingPreview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 composeUiTestJunit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
